--- a/ordlista.rmd
+++ b/ordlista.rmd
@@ -4,6 +4,6 @@
 
 **Expansivt stämningsläge** Uppblåst självbild med överdrivna känslouttryck, tex överdriven entusiasm, vänlighet, distanslöshet, klädsel etc. Förekommer vid hypomani och mani.
 
-**Målinriktat beteende** Målinriktat beteende innebär flexibelt val av respons baserat på inlärda kopplingar mellan situation, handling och konsekvens [@de_Wit2009]. Förekommer vid hypomani och mani.
+**Målinriktat beteende** Målinriktat beteende innebär flexibelt val av respons baserat på inlärda kopplingar mellan situation, handling och konsekvens [@deWit2009]. Förekommer vid hypomani och mani.
 
 **Tankeflykt** 
