--- a/psychosis.rmd
+++ b/psychosis.rmd
@@ -24,3 +24,5 @@ PsychEd Episode 12: Treatment of Schizophrenia Part IV Advanced Principles of Sc
 Addington, J., Addington, D., Abidi, S., Raedler, T., & Remington, G., Canadian treatment guidelines for individuals at clinical high risk of psychosis., Can J Psychiatry, 62(9), 656–661 (2017).  [@Addington2017]
 
 Remington, G., Addington, D., Honer, W., Ismail, Z., Raedler, T., & Teehan, M., Guidelines for the pharmacotherapy of schizophrenia in adults., Can J Psychiatry, 62(9), 604–616 (2017).  [@Remington2017]
+
+Disturbing Film: Symptoms of Schizophrenia - Medicine, Psychiatry, Patients & Treatment (1940s), se https://www.youtube.com/watch?v=wrA4NHvFTuo
