--- a/ordlista.rmd
+++ b/ordlista.rmd
@@ -1,4 +1,4 @@
-# Ordlista
+# Ordlista {#ordlista}
 
 **Grandiositet** Personen uppvisar en orealistisk känsla av överlägsenhet, att vara unik eller utvald. Förekommer vid mani, hypomani, narcissistiskt personlighetssyndrom, antisocialt personlighetssyndrom, reactive attachment disorder, [paranoia?]. Ingår i BPRS och PANSS.
 
